display none test

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     color: rgb(255, 255, 255);
     box-sizing: border-box;
     overflow:hidden;
+    display:none;
     margin:0;
     padding:0;
 }
