--- a/css/style_about.css
+++ b/css/style_about.css
@@ -37,9 +37,9 @@ header{
     margin: 10px;
 }
 h1{
-    margin:0;
     font-size: 64px;
     font-style: italic;
+    padding-right: 5px;
 }
 header nav{
     background-color: rgb(0, 0, 0);
