add overflow hidden final

--- a/css/style_about.css
+++ b/css/style_about.css
@@ -5,6 +5,7 @@
     font-family: 'Rajdhani', sans-serif;
     color: rgb(253, 253, 253);
     box-sizing: border-box;
+    overflow: hidden;
     margin:0;
     padding:0;
 }
