--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -5,6 +5,7 @@
     font-family: 'Rajdhani', sans-serif;
     color: rgb(255, 255, 255);
     box-sizing: border-box;
+    overflow: hidden;
     margin:0;
     padding:0;
 }
