--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,13 @@
 /* Global */
 *{
     font-family: 'Rajdhani', sans-serif;
-    color: rgb(255, 255, 255);
+    color: white;
     box-sizing: border-box;
     overflow:hidden;
     margin:0;
     padding:0;
 }
+
 /* SECTION: SHOWCASE */
 .showcase{
     position: absolute;
@@ -18,7 +19,7 @@
     display:flex;
     justify-content: space-between; /* equal distr. */
     align-items: center;
-    z-index: 2;
+    
 }
 .container{
     min-height: 100px;
@@ -78,6 +79,7 @@ header .highlight, header .current a
     font-size: 54px;
 }
 .showcase video{
+    /* display:none; */
     position:absolute;
     top: 0;
     left: 0;
@@ -135,6 +137,62 @@ input[type="email"]{
     background-color: black;
     color:cyan;
 }
+
+/* -------------- FOOTER -------------- */
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: #0f0c0c;
+    min-height: 120px;
+    margin: 0;
+}
+.cv-pdf i {
+    font-size: 18px;
+    color: white;
+    text-align: center;
+    padding-left: 5px;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+.cv-pdf i:hover {
+    color: rgb(50, 252, 10);
+}
+.social-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    padding-top: 5px;
+}
+.social-links li a i {
+    margin: 0 10px;
+    width:64px;
+    height: 64px;
+    padding: 24px 0;
+    border-radius: 50%;
+    font-size: 36px;
+    line-height: 16px;
+    text-align: center;
+    color: white;
+    background-color: rgb(35, 0, 236);
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+    
+}
+.social-links li a i:hover {
+    background:greenyellow;
+    color: black;
+}
+#footer-details {
+    padding: 20px;
+    border: solid 1px cyan;
+}
+
 
  /* RESPONSIVENESS: MEDIA QUERIES */
 @media (max-width: 768px){
