--- a/css/style_about.css
+++ b/css/style_about.css
@@ -91,7 +91,7 @@ p {
 /* BOXES */
 #boxes {
     position: absolute;
-    top: 500px;
+    top: 400px;
    display: flex;
    justify-content: center;
     z-index: 50;  
@@ -109,6 +109,60 @@ p {
     height: 300px;
     width: 300px;
     object-fit: cover;
+}
+/* -------------- FOOTER -------------- */
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: #0f0c0c;
+    min-height: 120px;
+    margin: 0;
+}
+.cv-pdf i {
+    font-size: 18px;
+    color: white;
+    text-align: center;
+    padding-left: 5px;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+.cv-pdf i:hover {
+    color: rgb(50, 252, 10);
+}
+.social-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    padding-top: 5px;
+}
+.social-links li a i {
+    margin: 0 10px;
+    width:64px;
+    height: 64px;
+    padding: 24px 0;
+    border-radius: 50%;
+    font-size: 36px;
+    line-height: 16px;
+    text-align: center;
+    color: white;
+    background-color: rgb(35, 0, 236);
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+    
+}
+.social-links li a i:hover {
+    background:greenyellow;
+    color: black;
+}
+#footer-details {
+    padding: 20px;
+    border: solid 1px cyan;
 }
 
  /*RESPONSIVENESS: MEDIA QUERIES */
