Add my social links

--- a/css/style_404.css
+++ b/css/style_404.css
@@ -18,7 +18,7 @@
     display:flex;
     justify-content: space-between; /* equal distr. */
     align-items: center;
-    z-index: 2;
+    
 }
 .container{
     min-height: 100px;
@@ -120,6 +120,62 @@ h2{
     color: rgb(5, 255, 234);
     font-size: 36px;
 }
+
+/* -------------- FOOTER -------------- */
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: #0f0c0c;
+    min-height: 120px;
+    margin: 0;
+}
+.cv-pdf i {
+    font-size: 18px;
+    color: white;
+    text-align: center;
+    padding-left: 5px;
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+}
+.cv-pdf i:hover {
+    color: rgb(50, 252, 10);
+}
+.social-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    padding-top: 5px;
+}
+.social-links li a i {
+    margin: 0 10px;
+    width:64px;
+    height: 64px;
+    padding: 24px 0;
+    border-radius: 50%;
+    font-size: 36px;
+    line-height: 16px;
+    text-align: center;
+    color: white;
+    background-color: rgb(35, 0, 236);
+    transition: all 0.35s ease-in-out;
+    -moz-transition: all 0.35s ease-in-out;
+    -webkit-transition: all 0.35s ease-in-out;
+    -o-transition: all 0.35s ease-in-out;
+    
+}
+.social-links li a i:hover {
+    background:greenyellow;
+    color: black;
+}
+#footer-details {
+    padding: 20px;
+    border: solid 1px cyan;
+}
+
 
  /* RESPONSIVENESS: MEDIA QUERIES */
  @media (max-width: 768px){
