--- a/css/style_about.css
+++ b/css/style_about.css
@@ -8,20 +8,21 @@
     overflow: hidden;
     margin:0;
     padding:0;
+   
 }
+
 .showcase #bg-img {
 width: 100%;
+height: 100%;
 object-fit: cover;
 }
 /* SECTION: SHOWCASE */
 .showcase{
-    position: abs;
+    
+    background-color: black;
+    position: absolute;
     width:100%;
     min-height: 100vh;
-    display:flex;
-    justify-content: space-between; 
-    align-items: center;
-    z-index: 2;
 }
 .container{
     min-height: 100px;
@@ -36,11 +37,6 @@ header{
     left: 30px;
     float:left;
     margin: 10px;
-}
-h1{
-    font-size: 64px;
-    font-style: italic;
-    padding-right: 5px;
 }
 header nav{
     background-color: rgb(0, 0, 0);
@@ -70,45 +66,89 @@ header .highlight, header .current a
 }
 h1 {
     font-size: 64px;
+    font-style: italic;
+    padding-right: 5px;
+    color: white;
 }
 h2 {
-    font-size: 54px;
+    
+    font-size: 26px;
+    color: white;
+    text-align: center;
 }
 p {
-    font-size: 20px;
-    width: 70%;
+    display:flex;
+    font-size: 16px;
+    color: white;
 }
-.text  {
+
+.about-text  {
     position: absolute;
-    top: 120px;
-    left: 100px;
-    max-width: 700px;
-    z-index:3;
-
+    top: 300px;
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
+    color:rgb(230, 7, 250);
+    background-color: black;
+    padding: 0;
+    margin: 0;
+   
 }
 
+.text-noo {
+    max-width: 400px;
+    max-height: 200px;
+    color:red;
+    overflow: hidden;
+}
 
 /* BOXES */
 #boxes {
     position: absolute;
     top: 400px;
    display: flex;
-   justify-content: center;
-    z-index: 50;  
+   /* gap: 300px; */
+   justify-content: space-evenly;
+   
     width: 100%;
-    background: none;
+    background-color: black;
+    margin: 0;
+    padding: 0;
+    color:rgb(238, 171, 25);
 }
+
 #boxes .box{
-    float:left;
+    color: rgb(52, 55, 240);
     text-align: center;
 }
-#boxes .box img{
-    padding: 10px;
+#boxes .box{
+    width: 400px;
+    height: 200px;
+    
 }
-.img-resize {
-    height: 300px;
-    width: 300px;
+.img-resize-1 {
+    height: 100%;
+    width: 100%;
     object-fit: cover;
+    
+    color: rgb(50, 206, 36);
+}
+.box, .img-resize-2 {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    padding: 5px;
+}
+.img-resize-3 {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+a {
+    font-size: 24px;
 }
 /* -------------- FOOTER -------------- */
 footer {
@@ -154,7 +194,6 @@ footer {
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
-    
 }
 .social-links li a i:hover {
     background:greenyellow;
@@ -194,13 +233,11 @@ footer {
     float:left;
 }
 
-.text{
+/* .text{
    width: 80%;
    position: absolute;
    top: 150px;
-   
-  
-}
+} */
 
 #boxes {
     background-color: black;
