--- a/css/style_404.css
+++ b/css/style_404.css
@@ -27,38 +27,51 @@
 header{
     color: white;
     border-bottom: cyan 3px solid;
+    height: 90px;
 } 
 #branding{
     position:relative;
-    left: 30px;
-    margin: 10px;
-    text-align: center;
-}
-p{  
-    font-size: 24px;
-    text-align: center;
+    left: 50px;
+    top: 3px;
+    float:left;
+    
 }
 h1{
-    font-size: 64px;
+    font-size: 70px;
     font-style: italic;
     padding-right: 5px;
 }
+h2{
+    margin:0;
+    font-size: 80px;
+}
 header nav{
     background-color: rgb(0, 0, 0);
-    float:right;
     margin-top:30px;
+    display:flex;
+    width: 40%;
+    justify-content: space-evenly;
+    float: right;
+    position:relative;
+    bottom: 15px;
 }
 header a{
     color:#ffffff;
     text-decoration: none;
     text-transform: uppercase;
-    font-size:36px;
+    font-size:55px;
+    padding: 20px;
 }
 header li{
     float:left;
     display:inline;
-    padding: 0 20px 0 20px;
+    padding: 0 10px 0 10px;
     list-style-type: none;
+    
+}
+p{  
+    font-size: 24px;
+    text-align: center;
 }
 header .highlight, header .current a
 {
