--- a/css/style_about.css
+++ b/css/style_about.css
@@ -11,18 +11,16 @@
    
 }
 
-.showcase #bg-img {
-width: 100%;
-height: 100%;
-object-fit: cover;
-}
+
 /* SECTION: SHOWCASE */
 .showcase{
-    
-    background-color: black;
     position: absolute;
     width:100%;
     min-height: 100vh;
+    display:flex;
+    justify-content: space-between; /* equal distr. */
+    align-items: center;
+    
 }
 .container{
     min-height: 100px;
@@ -31,29 +29,47 @@ object-fit: cover;
 header{
     color: white;
     border-bottom: cyan 3px solid;
+    height: 90px;
 } 
- #branding{
+#branding{
     position:relative;
-    left: 30px;
+    left: 50px;
+    top: 3px;
     float:left;
-    margin: 10px;
+    
+}
+h1{
+    font-size: 70px;
+    font-style: italic;
+    padding-right: 5px;
+}
+h2{
+    margin:0;
+    font-size: 80px;
 }
 header nav{
     background-color: rgb(0, 0, 0);
-    float:right;
     margin-top:30px;
+    display:flex;
+    width: 40%;
+    justify-content: space-evenly;
+    float: right;
+    position:relative;
+    bottom: 15px;
 }
 header a{
     color:#ffffff;
     text-decoration: none;
     text-transform: uppercase;
-    font-size:36px;
+    font-size:55px;
+    padding: 20px;
 }
 header li{
     float:left;
     display:inline;
-    padding: 0 20px 0 20px;
+    padding: 0 10px 0 10px;
     list-style-type: none;
+    
 }
 header .highlight, header .current a
 {
@@ -135,11 +151,12 @@ p {
     
     color: rgb(50, 206, 36);
 }
-.box, .img-resize-2 {
+.img-resize-2 {
     height: 100%;
     width: 100%;
     object-fit: cover;
     padding: 5px;
+    border: solid 10px blue;
 }
 .img-resize-3 {
     height: 100%;
