--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -18,6 +18,7 @@
     display:flex;
     justify-content: space-between; /* equal distr. */
     align-items: center;
+    
 }
 .container{
     min-height: 100px;
@@ -26,34 +27,47 @@
 header{
     color: white;
     border-bottom: cyan 3px solid;
+    height: 90px;
 } 
 #branding{
     position:relative;
-    left: 30px;
+    left: 50px;
+    top: 3px;
     float:left;
-    margin: 10px;
+    
 }
 h1{
-    font-size: 64px;
+    font-size: 70px;
     font-style: italic;
     padding-right: 5px;
 }
+h2{
+    margin:0;
+    font-size: 80px;
+}
 header nav{
     background-color: rgb(0, 0, 0);
-    float:right;
     margin-top:30px;
+    display:flex;
+    width: 40%;
+    justify-content: space-evenly;
+    float: right;
+    position:relative;
+    bottom: 15px;
 }
 header a{
     color:#ffffff;
     text-decoration: none;
     text-transform: uppercase;
-    font-size:36px;
+    font-size:55px;
+    padding: 20px;
 }
 header li{
     float:left;
     display:inline;
-    padding: 0 20px 0 20px;
+    padding: 0 10px 0 10px;
     list-style-type: none;
+    
 }
 header .highlight, header .current a
 {
