--- a/css/style_404.css
+++ b/css/style_404.css
@@ -49,7 +49,7 @@ header nav{
     background-color: rgb(0, 0, 0);
     margin-top:30px;
     display:flex;
-    width: 40%;
+    width: 100%;
     justify-content: space-evenly;
     float: right;
     position:relative;
@@ -81,12 +81,6 @@ header .highlight, header .current a
 header a:hover{
  color:#05f7ff;
  font-weight:bold;
-}
-h1 {
-    margin:0;
-    font-size: 64px;
-    font-style: italic;
-    background: none;
 }
 
 .showcase #btn {
@@ -139,7 +133,7 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    background-color: #0f0c0c;
+    background-color: black;
     min-height: 120px;
     margin: 0;
 }
@@ -190,40 +184,40 @@ footer {
 }
 
 
- /* RESPONSIVENESS: MEDIA QUERIES */
- @media (max-width: 768px){
-   /* RESPONSIVENESS - MEDIA QUERIES */
+
+/* RESPONSIVENESS: MEDIA QUERIES */
 @media (max-width: 768px){
-    
-    header #branding
-{
-    position:relative;
-    right:100px;
-    margin:0;
-    float:none;
-    text-align: center;
-    width: 100%;
-}
-
-header h1 {
-    position:relative;
-    bottom: 10px;
-    font-size:52px;
-}
-
-   header nav,
-   header nav li
+    #branding
 {
     position: relative;
+    top: 5px;
+    margin:0;
+    padding: 0;
+    height: 70px;
+    width: 80%;
+    text-align: center;
+    /* outline: auto yellow; */
+}
+header {
+    height: 140px;
+    background-color: grey;
+}
+
+nav {
+    display: flex;
+    justify-content: space-evenly;
+    height: 130px;
+    
+    /* outline: auto red; */
+}
+ul {
+    position: relative;
     bottom: 20px;
-    left: 50px;
-    /* outline: auto; */
-   margin:0;
-   float:none;
-   text-align: center;
-   width: 100%;
-   min-height: 200px;
-   display:inline;
+    height: 100px;
+    margin: 2px;
+    padding: 2px;
+    margin-top: 20px;
+    
 }
    header a {
     font-size:28px;
@@ -234,8 +228,7 @@ header h1 {
     margin-top: 15px;
     font-size: 36px;
 }
-}
- 
+
 #invalid-input {
     color:red;
     display: none;
