--- a/css/style_about.css
+++ b/css/style_about.css
@@ -11,7 +11,6 @@
    
 }
 
-
 /* SECTION: SHOWCASE */
 .showcase{
     position: absolute;
@@ -20,7 +19,7 @@
     display:flex;
     justify-content: space-between; /* equal distr. */
     align-items: center;
-    
+    outline: auto;
 }
 .container{
     min-height: 100px;
@@ -51,7 +50,7 @@ header nav{
     background-color: rgb(0, 0, 0);
     margin-top:30px;
     display:flex;
-    width: 40%;
+    width: 100%;
     justify-content: space-evenly;
     float: right;
     position:relative;
@@ -80,12 +79,7 @@ header .highlight, header .current a
  color:#05f7ff;
  font-weight:bold;
 }
-h1 {
-    font-size: 64px;
-    font-style: italic;
-    padding-right: 5px;
-    color: white;
-}
+
 h2 {
     
     font-size: 26px;
@@ -99,10 +93,10 @@ p {
 }
 
 .about-text  {
-    position: absolute;
-    top: 300px;
+    position: relative;
+    /* top: 300px; */
     width: 100%;
-    height: 100px;
+    /* height: 100%; */
     text-align: center;
     display: flex;
     justify-content: space-evenly;
@@ -113,21 +107,15 @@ p {
    
 }
 
-.text-noo {
-    max-width: 400px;
-    max-height: 200px;
-    color:red;
-    overflow: hidden;
-}
+
 
 /* BOXES */
 #boxes {
-    position: absolute;
-    top: 400px;
+    position: relative;
+    top: 100px;
    display: flex;
    /* gap: 300px; */
    justify-content: space-evenly;
-   
     width: 100%;
     background-color: black;
     margin: 0;
@@ -148,15 +136,12 @@ p {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    
-    color: rgb(50, 206, 36);
 }
 .img-resize-2 {
     height: 100%;
     width: 100%;
     object-fit: cover;
-    padding: 5px;
-    border: solid 10px blue;
+    border: solid 3px blue;
 }
 .img-resize-3 {
     height: 100%;
@@ -172,7 +157,7 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    background-color: #0f0c0c;
+    background-color: black;
     min-height: 120px;
     margin: 0;
 }
@@ -221,60 +206,85 @@ footer {
     border: solid 1px cyan;
 }
 
- /*RESPONSIVENESS: MEDIA QUERIES */
- @media (max-width: 768px){
-    header #branding
+ /* RESPONSIVENESS: MEDIA QUERIES */
+@media (max-width: 768px){
+    #branding
 {
-        position:relative;
-        right:100px;
-        margin:0;
-        float:none;
-        text-align: center;
-        width: 100%;
-}
-    header nav,
-    header nav li
-{
-    float:none;
+    position: relative;
+    top: 5px;
+    margin:0;
+    padding: 0;
+    height: 70px;
+    width: 80%;
     text-align: center;
-    width: 100%;
-    min-height: 200px;
-    display:inline;
+  
+}
+header {
+    height: 140px;
+    background-color: grey;
+}
+nav {
+    display: flex;
+    justify-content: space-evenly;
+    height: 130px;
+}
+ul {
+    position: relative;
+    bottom: 20px;
+    height: 100px;
+    margin: 2px;
+    padding: 2px;
+    margin-top: 20px;
 }
    header a {
-    font-size:24px;
-}
-   header #branding {
-    position:relative;
-    left:1px;
-    float:left;
-}
-
-/* .text{
-   width: 80%;
-   position: absolute;
-   top: 150px;
-} */
-
-#boxes {
-    background-color: black;
-    border: #ea00ff solid 5px;
-}
-#boxes img {
-    height: 150px;
-    width:150px;
-    display:flex;
-}
-h2 {
     font-size:36px;
 }
-h3 {
-    font-size:20px;
 
+#boxes {
+    background-color: rgb(66, 28, 28);
+    /* border: #ea00ff solid 5px; */
+    display:flex;
+    justify-content: space-evenly;
+    /* align-items: center; */
+    height: 300px;
+}
+/* #boxes img {
+    height: 150px;
+    width:150px;
+    align-items: center;
+    border: red solid 5px;
+    
+} */
+
+.about-text {
+    position: relative;
+    top: 100px;
+    /* border: yellow solid 2px; */
+    text-align: center;
+    height: 150px;
 }
 p{
-    width: 80%;
     font-size: 16px;
+    margin-top: 20px;
+}
+
+.texts {
+    /* border: green solid 5px; */
+    width: 100%;
+    padding: 2px;
+}
+
+h2 {
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    font-size:24px;
+    /* border: red solid 5px; */
+}
+
+#bg-img{
+    position: relative;
+    bottom: 200px;
 }
 
 }
