--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -49,7 +49,7 @@ header nav{
     background-color: rgb(0, 0, 0);
     margin-top:30px;
     display:flex;
-    width: 40%;
+    width: 100%;
     justify-content: space-evenly;
     float: right;
     position:relative;
@@ -78,12 +78,7 @@ header a:hover{
  color:#05f7ff;
  font-weight:bold;
 }
-h1 {
-    margin:0;
-    font-size: 64px;
-    font-style: italic;
-    background: none;
-}
+
 p {
     font-size: 20px;
     width: 40%;
@@ -169,7 +164,7 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    background-color: #0f0c0c;
+    background-color: black;
     min-height: 120px;
     margin: 0;
 }
@@ -219,35 +214,36 @@ footer {
     border: solid 1px cyan;
 }
 
-/* RESPONSIVENESS - MEDIA QUERIES */
+/* RESPONSIVENESS: MEDIA QUERIES */
 @media (max-width: 768px){
-
-header #branding
-{
-    position:relative;
-    right:100px;
-    margin:0;
-    float:none;
-    text-align: center;
-    width: 100%;
-}
-header h1 {
-    position:relative;
-    bottom: 10px;
-    font-size:52px;
-}
-header nav,
-header nav li
+    #branding
 {
     position: relative;
+    top: 5px;
+    margin:0;
+    padding: 0;
+    height: 70px;
+    width: 80%;
+    text-align: center;
+}
+header {
+    height: 140px;
+    background-color: grey;
+}
+
+nav {
+    display: flex;
+    justify-content: space-evenly;
+    height: 130px;
+}
+ul {
+    position: relative;
     bottom: 20px;
-    left: 50px;
-   margin:0;
-   float:none;
-   text-align: center;
-   width: 100%;
-   min-height: 200px;
-   display:inline;
+    height: 100px;
+    margin: 2px;
+    padding: 2px;
+    margin-top: 20px;
+    
 }
 header a {
     font-size:28px;
