--- a/css/style.css
+++ b/css/style.css
@@ -15,27 +15,50 @@
     position: absolute;
     width:100%;
     min-height: 100vh;
-    padding:100px;
     display:flex;
     justify-content: space-between; /* equal distr. */
     align-items: center;
-    
 }
 .container{
     min-height: 100px;
+    width: 100%;
     background-color:rgb(0, 0, 0);
+    outline: solid 3px yellow;
+    display: flex;
+    justify-content: space-evenly;
 }
 header{
+    background-color: grey;
+    width: 100%;
     color: white;
     border-bottom: cyan 3px solid;
     height: 90px;
 } 
 #branding{
+    display: flex;
+    justify-content: space-evenly;
     position:relative;
-    left: 50px;
+    right: 280px;
     top: 3px;
-    float:left;
-    
+    width: 300px;
+}
+nav{
+    position: relative;
+    left: 300px;
+    height: 80px;
+    margin: 15px;
+}
+header li{
+    display:inline;
+    padding: 0 10px 0 10px;
+    list-style-type: none; 
+}
+header a{
+    color:#ffffff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size:55px;
+    padding: 15px;
 }
 h1{
     font-size: 70px;
@@ -44,31 +67,19 @@ h1{
 }
 h2{
     margin:0;
-    font-size: 80px;
+    font-size: 20px;
 }
-header nav{
-    background-color: rgb(0, 0, 0);
-    margin-top:30px;
-    display:flex;
-    width: 100%;
-    justify-content: space-evenly;
-    float: right;
-    position:relative;
-    bottom: 15px;
+h3{
+    margin:0;
+    font-size: 70px;
 }
-header a{
-    color:#ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size:55px;
-    padding: 20px;
-}
-header li{
-    float:left;
-    display:inline;
-    padding: 0 10px 0 10px;
-    list-style-type: none;
-    
+h4{
+    position:absolute;
+    top: 350px;
+    left: 50px;
+    z-index: 5;
+    color: rgb(5, 255, 234);
+    font-size: 36px;
 }
 header .highlight, header .current a
 {
@@ -105,14 +116,7 @@ header .highlight, header .current a
     mix-blend-mode: overlay;
 }
 /* SECTION: NEWSLETTER */
-h3{
-    position:absolute;
-    top: 350px;
-    left: 50px;
-    z-index: 5;
-    color: rgb(5, 255, 234);
-    font-size: 36px;
-}
+
 .newsletter{
     position:absolute;
     top: 400px;
