--- a/css/style_404.css
+++ b/css/style_404.css
@@ -14,27 +14,27 @@
     position: absolute;
     width:100%;
     min-height: 100vh;
-    padding:100px;
     display:flex;
-    justify-content: space-between; /* equal distr. */
+    justify-content: space-evenly;
     align-items: center;
-    
+    outline: solid 7px red;
 }
 .container{
-    min-height: 100px;
-    background-color:rgb(0, 0, 0);
+    background-color: black;
 }
 header{
+    width: 100%;
     color: white;
     border-bottom: cyan 3px solid;
     height: 90px;
 } 
 #branding{
+    display: flex;
+    justify-content: space-evenly;
     position:relative;
-    left: 50px;
+    right: 225px;
     top: 3px;
-    float:left;
-    
+    width: 100%;
 }
 h1{
     font-size: 70px;
@@ -43,35 +43,13 @@ h1{
 }
 h2{
     margin:0;
-    font-size: 80px;
-}
-header nav{
-    background-color: rgb(0, 0, 0);
-    margin-top:30px;
-    display:flex;
-    width: 100%;
-    justify-content: space-evenly;
-    float: right;
-    position:relative;
-    bottom: 15px;
-}
-header a{
-    color:#ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size:55px;
-    padding: 20px;
-}
-header li{
-    float:left;
-    display:inline;
-    padding: 0 10px 0 10px;
-    list-style-type: none;
-    
+    font-size: 40px;
 }
 p{  
-    font-size: 24px;
-    text-align: center;
+    position: relative;
+    top: 30px;
+    font-size: 36px;
+    
 }
 header .highlight, header .current a
 {
