--- a/css/style_about.css
+++ b/css/style_about.css
@@ -8,34 +8,58 @@
     overflow: hidden;
     margin:0;
     padding:0;
-   
 }
+
 
 /* SECTION: SHOWCASE */
 .showcase{
     position: absolute;
     width:100%;
     min-height: 100vh;
-    display:flex;
-    justify-content: space-between; /* equal distr. */
-    align-items: center;
-    outline: auto;
+    outline: yellow 10px;
 }
+
 .container{
     min-height: 100px;
+    width: 100%;
     background-color:rgb(0, 0, 0);
+    outline: solid 3px yellow;
+    display: flex;
+    justify-content: space-evenly;
 }
 header{
+    background-color: grey;
+    width: 100%;
     color: white;
     border-bottom: cyan 3px solid;
     height: 90px;
 } 
 #branding{
+    display: flex;
+    justify-content: space-evenly;
     position:relative;
-    left: 50px;
+    right: 280px;
     top: 3px;
-    float:left;
+    width: 300px;
     
+}
+nav{
+    position: relative;
+    left: 300px;
+    height: 80px;
+    margin: 15px;
+}
+header li{
+    display:inline;
+    padding: 0 10px 0 10px;
+    list-style-type: none; 
+}
+header a{
+    color:#ffffff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size:55px;
+    padding: 15px;
 }
 h1{
     font-size: 70px;
@@ -44,31 +68,16 @@ h1{
 }
 h2{
     margin:0;
-    font-size: 80px;
+    font-size: 20px;
 }
-header nav{
-    background-color: rgb(0, 0, 0);
-    margin-top:30px;
+h3{
+    margin:0;
+    font-size: 36px;
+}
+p {
     display:flex;
-    width: 100%;
-    justify-content: space-evenly;
-    float: right;
-    position:relative;
-    bottom: 15px;
-}
-header a{
-    color:#ffffff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size:55px;
-    padding: 20px;
-}
-header li{
-    float:left;
-    display:inline;
-    padding: 0 10px 0 10px;
-    list-style-type: none;
-    
+    font-size: 20px;
+    color: white;
 }
 header .highlight, header .current a
 {
@@ -79,40 +88,31 @@ header .highlight, header .current a
  color:#05f7ff;
  font-weight:bold;
 }
-
-h2 {
-    
-    font-size: 26px;
-    color: white;
-    text-align: center;
-}
-p {
-    display:flex;
-    font-size: 16px;
-    color: white;
-}
-
-.about-text  {
-    position: relative;
-    /* top: 300px; */
+/* ABOUT - MAIN CONTENT */
+.about-text {
+    position: absolute;
+    top: 280px;
+    height: 100px;
     width: 100%;
-    /* height: 100%; */
+    background-color:blue;
     text-align: center;
     display: flex;
     justify-content: space-evenly;
-    color:rgb(230, 7, 250);
-    background-color: black;
-    padding: 0;
-    margin: 0;
-   
+    /* outline: solid 5px yellow; */
+    padding-bottom: 5px;
 }
 
-
+.texts {
+    /* outline: auto red; */
+    position: relative;
+    width: 400px;
+    
+}
 
 /* BOXES */
 #boxes {
-    position: relative;
-    top: 100px;
+    position: absolute;
+    top: 380px;
    display: flex;
    /* gap: 300px; */
    justify-content: space-evenly;
@@ -126,12 +126,10 @@ p {
 #boxes .box{
     color: rgb(52, 55, 240);
     text-align: center;
-}
-#boxes .box{
     width: 400px;
     height: 200px;
-    
 }
+
 .img-resize-1 {
     height: 100%;
     width: 100%;
