--- a/css/style_about.css
+++ b/css/style_about.css
@@ -139,26 +139,20 @@ a {
     font-size: 24px;
 }
 /* -------------- FOOTER -------------- */
-footer {
-    position: absolute;
+.container-fluid {
+    display: flex;
+    justify-content: space-evenly;
+    outline: solid 2px cyan;
+    position: fixed;
     bottom: 0;
     width: 100%;
     background-color: black;
-    min-height: 120px;
-    margin: 0;
 }
-.cv-pdf i {
-    font-size: 18px;
-    color: white;
-    text-align: center;
-    padding-left: 5px;
-    transition: all 0.35s ease-in-out;
-    -moz-transition: all 0.35s ease-in-out;
-    -webkit-transition: all 0.35s ease-in-out;
-    -o-transition: all 0.35s ease-in-out;
+#footer-details {
+    padding: 20px;
 }
-.cv-pdf i:hover {
-    color: rgb(50, 252, 10);
+.col-sm-4 {
+    display: inline;
 }
 .social-links {
     display: flex;
@@ -186,10 +180,6 @@ footer {
 .social-links li a i:hover {
     background:greenyellow;
     color: black;
-}
-#footer-details {
-    padding: 20px;
-    border: solid 1px cyan;
 }
 
 /* RESPONSIVENESS: MEDIA QUERIES */
@@ -269,5 +259,42 @@ p {
     display: flex;
     justify-content: center;
     margin: 0;
+}
+
+/* FOOTER - RESPONSIVENESS */
+.container-fluid{
+    position: relative;
+    top: 500px;
+    height: 100px;
+    width: 100%;
+    border: solid 2px cyan;
+    outline: none;
+}
+#footer-details {
+    display: inline;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    border: none;
+}
+.col-sm-4 {
+    position: relative;
+    top: -90px;
+    left: 300px;
+}
+.list-inline {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+}
+.social-links li a i {
+    font-size: 48px;
+    width: 64px;
+    height: 64px;
+    padding: 24px 0;
+    margin: 0 5px;
+    line-height: 16px;
+    text-align:center;
 }
 }
