--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
     margin:0;
     padding:0;
 }
-
 .container{
     margin: 0;
     padding: 0;
@@ -50,8 +49,6 @@
     background: #03a9f4;
     mix-blend-mode: overlay;
 }
-
-
 /* ----------- NAV-BAR ----------- */
 nav{
     float:right;
@@ -73,7 +70,8 @@ header a{
     font-size:48px;
     padding: 15px;
 }
-h1{
+#branding a{
+    text-transform: none;
     font-size: 80px;
     font-style: italic;
     padding-right: 20px;
