--- a/css/style_contact.css
+++ b/css/style_contact.css
@@ -8,10 +8,7 @@
     margin:0;
     padding:0;
 }
-#branding{
-    display: flex;
-    align-items: center;
-}
+
 .container{
     margin: 0;
     padding: 0;
@@ -70,7 +67,12 @@ header a{
     font-size:48px;
     padding: 15px;
 }
-h1{
+#branding{
+    display: flex;
+    align-items: center;
+}
+#branding a{
+    text-transform: none;
     font-size: 80px;
     font-style: italic;
     padding-right: 20px;
